--- a/css/styles.scss
+++ b/css/styles.scss
@@ -106,7 +106,7 @@ footer {
   background: linear-gradient(to bottom, #3f4c88,$mainColor);
 
   &__works{
-    background: linear-gradient(rgba(0, 0, 0, 0.5))  ,url(../images/mv.jpeg) center/ cover no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, 0.5))  ,url(../images/mv.jpeg) center no-repeat;
     background-attachment: fixed;
     padding: 80px 0 150px;
     margin-bottom: 0;
