ページネーションの修正

--- a/css/styles.css
+++ b/css/styles.css
@@ -988,71 +988,57 @@ body.active {
   overflow: hidden;
 }
 
-/* スライダー */
-.slider {
-  position: relative;
+.swiper-slide .banners__item-image {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
-/*矢印*/
-.prev-arrow,
-.next-arrow {
+.my-swiper-button-prev,
+.my-swiper-button-next {
+  width: 30px;
+  height: 70px;
+  background-color: rgba(38, 47, 87, 0.5);
   position: absolute;
+  top: 50%;
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
   z-index: 1;
-  top: 40%;
-  cursor: pointer;
-  outline: none;
-  color: #333;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
-
-.prev-arrow {
-  left: 0;
-  border-radius: 8px 0 0 8px;
-}
-
-.next-arrow {
-  right: 0;
-  border-radius: 0 8px 8px 0;
-}
-
-.prev-arrow::before {
+.my-swiper-button-prev::after,
+.my-swiper-button-next::after {
   content: "";
+  height: 10px;
+  width: 10px;
   display: inline-block;
-  border-top: 2px solid #000;
-  border-left: 2px solid #000;
+  border-top: 2px solid #fff;
+}
+
+.my-swiper-button-prev {
+  border-radius: 60% 0% 0% 60%;
+  left: 0;
+}
+.my-swiper-button-prev::after {
+  border-left: 2px solid #fff;
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
-  width: 6px;
-  height: 6px;
+  margin-left: 4px;
+}
+.my-swiper-button-prev.--only-topWorks {
+  left: -12px;
 }
 
-.next-arrow::before {
-  content: "";
-  display: inline-block;
-  border-top: 2px solid #000;
-  border-right: 2px solid #000;
+.my-swiper-button-next {
+  border-radius: 0% 60% 60% 0%;
+  right: 0;
+}
+.my-swiper-button-next::after {
+  border-right: 2px solid #fff;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
-  width: 6px;
-  height: 6px;
+  margin-left: -4px;
 }
-
-/* ドット */
-.slick-dots {
-  position: absolute;
-  bottom: 1% !important;
-  text-align: right !important;
-}
-.slick-dots li button:before {
-  color: #FFD54D;
+.my-swiper-button-next.--only-topWorks {
+  right: -12px;
 }
 
 @media (min-width: 768px) {
@@ -1077,32 +1063,25 @@ body.active {
   .works-top__item-content {
     min-height: 90px;
   }
-  .slideBtn {
+  .my-swiper-button-prev,
+.my-swiper-button-next {
     width: 40px;
-    height: 70px;
   }
-  .slideBtn--left {
-    left: -20px;
-  }
-  .slideBtn--left::after {
-    width: 10px;
+  .my-swiper-button-prev::after,
+.my-swiper-button-next::after {
+    content: "";
     height: 10px;
-  }
-  .slideBtn--right {
-    right: -20px;
-  }
-  .slideBtn--right::after {
     width: 10px;
-    height: 10px;
+    display: inline-block;
+    border-top: 2px solid #fff;
   }
-  .prev-arrow::before {
-    width: 10px;
-    height: 10px;
-    margin-left: 6px;
+  .my-swiper-button-prev.--only-topWorks {
+    left: -12px;
+    height: 100px;
   }
-  .next-arrow::before {
-    width: 10px;
-    height: 10px;
+  .my-swiper-button-next.--only-topWorks {
+    right: -12px;
+    height: 100px;
   }
   .practice__wrapper {
     margin-top: 80px;
