--- a/css/styles.scss
+++ b/css/styles.scss
@@ -341,6 +341,10 @@ footer {
   }
 }
 
+.item--responsive{
+  width: 100%;
+}
+
 /*  パンクズ  */
 .breadcrumbs{
   background-color: #CED7DC;
@@ -919,7 +923,7 @@ body.active{
     line-height: 1.6;
     font-size: 14px;
     letter-spacing: 0.15em;
-    min-height: 110px;
+    min-height: 70px;
   }
 }
 
@@ -1093,10 +1097,6 @@ body.active{
     &__item-title{
       font-size: rem(20);
       padding: 30px 20px;
-    }
-
-    &__item-content{
-      min-height: 90px;
     }
   }
 
@@ -2349,6 +2349,9 @@ span.wpcf7-not-valid-tip {
   border: 3px solid rgba(255, 255, 255, 0.1);
 }
 
+@media (min-width: 768px){
+  
+}
 /* -------------------------------------------- */
 /* contact */
 /* -------------------------------------------- */
