アーカイブページへ練習コーディングの移動

--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,7 @@ footer {
 }
 .sub-heading.--ja {
   position: absolute;
+  width: 100%;
   left: 50%;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
@@ -2081,7 +2082,6 @@ span.wpcf7-not-valid-tip::before {
 .modal-image-wrapper img {
   max-width: 70%;
   max-height: 70%;
-  height: 100%;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -2093,9 +2093,22 @@ span.wpcf7-not-valid-tip::before {
   border: 3px solid rgba(255, 255, 255, 0.1);
 }
 
+#pcImage {
+  display: none;
+}
+
 /* -------------------------------------------- */
-/* contact */
+/* cording */
 /* -------------------------------------------- */
+.cording-archive {
+  padding-top: 50px;
+}
+
+@media (min-width: 768px) {
+  .cording-archive {
+    padding-top: 100px;
+  }
+}
 /* -------------------------------------------- */
 /* ▼タブレット用デザインとして付け足すデザイン */
 /* -------------------------------------------- */
