--- a/css/styles.scss
+++ b/css/styles.scss
@@ -630,7 +630,6 @@ body.active{
   height: 100vh;
   position: relative;
   width: 100%;
-  // background: url(../images/blog-image.png);
 
   //あしらい
   &::before,
@@ -758,6 +757,78 @@ body.active{
   padding: 300px 0px 200px;
   position: relative;
   z-index: 2;
+}
+
+.bgextend{
+	animation-name:bgextendAnimeBase;
+	animation-duration:1s;
+	animation-fill-mode:forwards;
+	position: relative;
+	overflow: hidden;
+	opacity:0;
+}
+
+@keyframes bgextendAnimeBase{
+  from {
+    opacity:0;
+  }
+
+  to {
+    opacity:1;  
+}
+}
+
+/*中の要素*/
+.bgappear{
+	animation-name:bgextendAnimeSecond;
+	animation-duration:1s;
+	animation-delay: 0.6s;
+	animation-fill-mode:forwards;
+	opacity: 0;
+}
+
+@keyframes bgextendAnimeSecond{
+	0% {
+	opacity: 0;
+	}
+	100% {
+	opacity: 1;
+  }
+}
+
+.bgLRextend::before{
+	animation-name:bgLRextendAnime;
+	animation-duration:1s;
+	animation-fill-mode:forwards;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: $accentColor;
+}
+
+@keyframes bgLRextendAnime{
+	0% {
+		transform-origin:left;
+		transform:scaleX(0);
+	}
+	50% {
+		transform-origin:left;
+		transform:scaleX(1);
+	}
+	50.001% {
+		transform-origin:right;
+	}
+	100% {
+		transform-origin:right;
+		transform:scaleX(0);
+	}
+}
+
+
+.bgappearTrigger,
+.bgLRextendTrigger{
+    opacity: 0;
 }
 
 /* スクロール */
@@ -2355,8 +2426,6 @@ span.wpcf7-not-valid-tip {
     }
   }
 }
-
-
 
 /* -------------------------------------------- */
 /* ▼タブレット用デザインとして付け足すデザイン */
